# canari

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .oxlintrc.json  .oxlintrc.nest.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEV_BRANCH_SETUP.md  DISPLAY_LOCATIONS.md  FIXES_APPLIED.md  GRAPHIC_CHANGES_v0.1.11_to_HEAD.md  LICENSE  Makefile  PROBLEMS_AND_SOLUTIONS.md  README.md  SECURITY.md  analyze_commit.py  clean_make.js  commit-msg.txt  commit-msg2.txt  diff_output.json  frontend.code-workspace  install_js_deps.ps1  install_simple.ps1  out-methods.txt  oxfmt.json  package-lock.json  package.json  patch-posts-stripe.js  py_stat.txt  rust-toolchain.toml  temp.css  (+4 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: android-release.yml  appimage-release.yml  bump-version.yml  cache-cleanup.yml  cd-dev.yml  cd.yml  ci.yml  code-analysis.yml  dependabot-auto-merge.yml  ios-release.yml
.husky/: pre-commit  pre-push
apps/auth-service/: ARCHITECTURE.md  build.gradle  package-lock.json  package.json  settings.gradle
apps/call-service/: Cargo.toml
apps/call-service/src/: main.rs
apps/channel-service/: README.md  eslint.config.mjs  package-lock.json  package.json
apps/chat-delivery-service/: eslint.config.mjs  package-lock.json  package.json  test_output.txt  tsconfig.json
apps/chat-gateway/: Cargo.toml  build.rs  error.txt  output.txt  patch.js
apps/chat-gateway/src/: handlers.rs  main.rs  models.rs  presence.rs  state.rs  subscribers.rs  ws_dispatch.rs
apps/chat-history-service/: package-lock.json  package.json
apps/core-service/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/core-service-old/: package-lock.json  package.json
apps/form-service/: package-lock.json  package.json
apps/media-service/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/post-service/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
apps/social-service/: README.md  lint.txt  (+4 more)
docs/: ANDROID_MOBILE.md  ARCHITECTURE.md  AUDIT-MLS-2026-06.md  BACKEND.md  CHANNELS_SERVICE_ROADMAP.md  CHAT_GATEWAY.md  CHECKLIST_VALIDATION_DISCUSSIONS_COMMUNAUTES.md  CHIFFREMENT.md  CI_CD.md  CLOUDFLARE_TUNNEL.md  COMMUNITIES.md  COMPONENTS.md  COTISATIONS-REWORK-PLAN.md  DEPLOIEMENT.md  DEPLOYMENT_SETUP.md  DEVELOPMENT.md  DISCUSSIONS_GROUPES_COMMUNAUTES.md  FIX_HTTPS_MOBILE.md  FORMS_SERVICE.md  FRONTEND.md  GITHUB_SECRETS_SETUP.md  IOS_PUSH_SETUP.md  KEYSTORE_PLAN.md  MLS-REAUDIT-2026-07.md  MLS.md  MLS_DESYNC_PREVENTION.md  MLS_RECOVERY_LADDER.md  MLS_REWRITE_PLAN.md  MULTI_DEVICE.md  NORMALIZATION-PLAN.md  PUSH_NOTIFICATIONS.md  QR_SYNC_ROADMAP.md  ROADMAP.md  ROADMAP_IMPROVEMENTS.md  ROADMAP_UI_MESSAGES.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIX_JWT.md  SECURITY_NPM_AUDIT.md  SSL_SETUP.md  STORAGE.md  (+3 more)
frontend/: .env.example  .eslintcache  .gitignore  .oxlintrc.json  .prettierignore  README.md  eslint.config.js  lint.txt  lint_out.txt  oxvelte.config.json  package-lock.json  package.json  svelte-out.txt  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.ts
frontend/mls-core/: Cargo.toml
frontend/mls-core/benches/: mls_perf.rs  support.rs
frontend/mls-core/src/: crypto.rs  group.rs  keystore.rs  lib.rs  members.rs  messaging.rs  security.rs  state.rs  welcome.rs
frontend/mls-core/tests/: add_members_dedup.rs  batch_decrypt.rs  commit_catchup.rs  epoch_race.rs  external_join.rs  pending_commit.rs  process_welcome_orphan.rs  reload_monotonic.rs  same_epoch_ratchet.rs  state_cache.rs
frontend/mls-wasm/: Cargo.toml
frontend/mls-wasm/src/: lib.rs  pin_crypto.rs
frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  development.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/patches/tao/: .cargo_vcs_info.json  README.md
frontend/src-tauri/patches/tao/examples/: window_icon.rs
frontend/src-tauri/patches/tao/src/: event.rs  keyboard.rs
frontend/src-tauri/patches/tao/src/platform_impl/android/: ndk_glue.rs
frontend/src-tauri/patches/tao/src/platform_impl/ios/: app_state.rs  event_loop.rs  ffi.rs  view.rs  window.rs
frontend/src-tauri/patches/tao/src/platform_impl/macos/: view.rs  window_delegate.rs
frontend/src-tauri/patches/tao/src/platform_impl/macos/util/: async.rs  cursor.rs  mod.rs
frontend/src-tauri/patches/tao/src/platform_impl/windows/: event.rs
frontend/src-tauri/patches/tauri-plugin-keystore/: Cargo.toml  README.md
frontend/src-tauri/patches/tauri-plugin-keystore/.github/workflows/: publish-dry-run.yaml  publish.yaml  release-dry-run.yaml  release.yaml
frontend/src-tauri/patches/tauri-plugin-keystore/android/: consumer-rules.pro
frontend/src-tauri/patches/tauri-plugin-keystore/android/src/main/java/: KeystorePlugin.kt
frontend/src-tauri/patches/tauri-plugin-keystore/ios/Sources/: KeystorePlugin.swift
frontend/src-tauri/patches/tauri-plugin-keystore/permissions/autogenerated/: reference.md
frontend/src-tauri/patches/tauri-plugin-keystore/permissions/schemas/: schema.json
frontend/src-tauri/patches/tauri-plugin-keystore/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
frontend/src-tauri/src/: concurrency.rs  keystore_bridge.rs  lib.rs  main.rs  state.rs
frontend/src-tauri/src/commands/: bootstrap.rs  mls.rs  mod.rs  push.rs  storage.rs
frontend/src-tauri/src/mobile/: background.rs  ios_ffi.rs  mod.rs  proto_fields.rs
infrastructure/: .env.example  MIGRATION.md  apply_python_script.py  docker-compose.dev.yml  docker-compose.prod.yml
libs/shared-rust/: Cargo.toml
libs/shared-rust/src/: lib.rs
plans/: fix-channel-key-distribution-race.md
scripts/: README_ENV_SETUP.md  bump-app-version.sh  check-oidc.sh  deploy.sh  install-oxvelte.sh  print-android-app-link-fingerprint.sh  read-app-version.sh  run-oxvelte.sh  setup-env.ps1  setup-env.sh
(+1080 files in other folders)
