[package]
name = "call-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
webrtc = "0.10.0"
anyhow = "1.0.81"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
dashmap = "5.5.3"
