[package]
name = "chat-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.0.2", features = ["tokio-comp"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
shared-rust = { path = "../../libs/shared-rust" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }

