[package]
name = "mls-core"
version = "0.1.0"
edition = "2024"

[dependencies]
openmls = {version = "0.8.1", features = ["js"]}
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

argon2 = "0.5.3"
chacha20poly1305 = "0.10"
rand = "0.10"
base64 = "0.22"
thiserror = "2.0.18"
ciborium = "0.2.2"
openmls_memory_storage = "0.5.0"
openmls_basic_credential = "0.5.0"
