[package]
name = "canari"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mines_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-localhost = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.4", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mls-core = { path = "../mls-core" }
tauri-plugin-biometric = "2"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-websocket = "2.4.2"
tauri-plugin-log = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
log = "0.4"

[patch.crates-io]
# tao 0.35.0 panics with NullPtr("get_object_class") when intent.getType() returns null
# (e.g. deep links like fr.emse.canari://callback). Fixed by adding a null guard.
tao = { path = "patches/tao" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
android_logger = "0.14"
log = "0.4"

