[package]
name = "canari"
version = "0.9.8"
description = "Le réseau des marteaux"
authors = ["Léon Muselli / Jolan Boudin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mines_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-localhost = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.4", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mls-core = { path = "../mls-core" }
tauri-plugin-biometric = "2"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-websocket = "2.4.2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
log = "0.4"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[patch.crates-io]
# tao 0.35.0 panics with NullPtr("get_object_class") when intent.getType() returns null
# (e.g. deep links like fr.emse.canari://callback). Fixed by adding a null guard.
tao = { path = "patches/tao" }
# tauri-plugin-keystore: le PromptInfo biométrique est en anglais en dur dans
# KeystorePlugin.kt (pas d'option JS). Patch local pour afficher un texte FR Canari.
tauri-plugin-keystore = { path = "patches/tauri-plugin-keystore" }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
log = "0.4"

