[package]
name = "shared-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
ts-rs = { version = "12.0.1", features = ["uuid-impl", "chrono-impl"] }


